--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ before_install:
   - brew uninstall xctool
   - brew install xctool
   - export LANG=en_US.UTF-8
-  - gem i cocoapods --no-ri --no-rdoc
-xcode_workspace: LLARingSpinnerView.xcworkspace
+  #- gem i cocoapods --no-ri --no-rdoc
+#xcode_workspace: LLARingSpinnerView.xcworkspace
+xcode_project: LLARingSpinnerView.xcodeproj
 xcode_scheme: LLARingSpinnerView
 xcode_sdk: iphonesimulator
