--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,25 @@
+# Xcode
 .DS_Store
-*xcuserdata/
-*build/
-*.mode1v3
-*.mode2v3
-*.perspectivev3
+*/build/*
 *.pbxuser
-./*.xcworkspace
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+profile
 *.moved-aside
+DerivedData
+.idea/
+*.hmap
 *.swp
 *.lock
 *.xccheckout
-DerivedData/
+./*.xcworkspace
+
+#CocoaPods
+Pods
+Podfile.lock
